--- a/public/css/Component/Customer/Customer_Request_Ongoing.css
+++ b/public/css/Component/Customer/Customer_Request_Ongoing.css
@@ -28,7 +28,6 @@
 
     .table td {
         height: 55px;
-
     }
 
     .table-row .cancel-open img {
@@ -41,7 +40,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-
     }
 
     .main-right-bottom-two-content {
@@ -51,13 +49,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
     }
 
     .main-right-bottom-two-content img {
         width: 450px;
         height: 450px;
-
     }
 
     .main-right-bottom-two-content h1 {
@@ -72,8 +68,6 @@
         margin-top: 7px;
         color: var(--main-text-color);
     }
-
-    .bx bx-data {}
 
     .main-right-bottom-two-content button {
         height: 40px;
@@ -132,32 +126,37 @@
         border-radius: 50%;
     }
 
-    /*Delete confirm popup*/
+    /*Cancel confirm popup*/
     .delete_confirm {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 4;
         display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100%;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
 
+    .delete_confirm.active {
+        transform: translate(-50%, -50%) scale(1);
     }
 
     .popup {
         width: 400px;
         background: white;
-        border-radius: 6px;
+        border-radius: 10px;
         top: 0;
         text-align: center;
         padding: 0 30px 30px;
         color: #333;
-        transition: transform 0.4s, top 0.4s;
+        box-shadow: var(--box-shadow);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+
     }
 
     .popup a {
@@ -219,150 +218,6 @@
     }
 
     /*View Collector Pop*/
-    .personal-details-popup-box {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 4;
-        display: none;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-    }
-
-    .personal-details-popup-form {
-        width: 45%;
-        background: white;
-        border-radius: 6px;
-        top: 0;
-        position: relative;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: #333;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        transition: transform 0.4s, top 0.4s;
-    }
-
-    .personal-details-topic {
-        letter-spacing: 0.03rem;
-    }
-
-    .personal-details-topic::before {
-        content: '';
-        position: absolute;
-        margin-top: 25px;
-        margin-bottom: 25px;
-        height: 3px;
-        width: 70px;
-        margin-left: 25%;
-        background: #1B6652;
-    }
-
-    .personal-details-popup-form-close {
-        width: 25px;
-        height: 25px;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-    }
-
-    .personal-details-popup {
-        display: grid;
-        grid-template-columns: 40% 60%;
-        width: 100%;
-        border-radius: 4px;
-        height: 100%;
-        padding-top: 10px;
-        margin-top: 17px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .personal-details-right {
-        display: grid;
-        grid-template-columns: 30% 70%;
-    }
-
-    .personal-details-right-labels {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-bottom: 50px;
-        padding-left: 25px;
-    }
-
-    .personal-details-right-labels span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #7c7c7d;
-    }
-
-    .personal-details-right-values {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 40px;
-        padding-bottom: 50px;
-        padding-left: 32px;
-    }
-
-    .personal-details-right-values span {
-        margin-bottom: 15px;
-        font-size: 15px;
-        color: #767e95;
-        font-weight: 550;
-    }
-
-    .personal-details-left {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 10px;
-        flex-direction: column;
-    }
-
-    .personal-details-left img {
-        width: 150px;
-        height: 150px;
-    }
-
-    .personal-details-left p {
-        margin-top: 5px;
-        font-size: 15px;
-        color: #7c7c7d;
-    }
-
-    .personal-details-left span {
-        color: #767e95;
-        font-weight: 550;
-    }
-
-    .profile-pic {
-        width: 70%;
-        height: auto;
-        border-radius: 50%;
-        overflow: hidden;
-        margin-bottom: 8px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    }
-
-    .personal-details-topic {
-        font-size: 18px;
-        font-weight: 500;
-        position: relative;
-        margin-inline-end: auto;
-        margin-top: 15px;
-    }
 
 
     /*---------------*/
