--- a/public/css/Component/Admin/Admin_Center_Main_Request_Cancelled.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Request_Cancelled.css
@@ -35,7 +35,7 @@
         text-align: center;
         height: 55px;
         display: grid;
-        grid-template-columns: 10% 13% 13% 12.5% 12.5% 14% 12.5% 12.5%;
+        grid-template-columns: 10% 13% 13% 12.5% 12.5% 12% 12% 15%;
     }
 
     .table-row {
@@ -44,7 +44,7 @@
         text-align: center;
         height: 65px;
         display: grid;
-        grid-template-columns: 10% 13% 13% 12.5% 12.5% 14% 12.5% 12.5%;
+        grid-template-columns: 10% 13% 13% 12.5% 12.5% 12% 12% 15%;
         border-bottom: 2px solid #CACACA;
     }
 
@@ -72,6 +72,17 @@
     }
 
     /*Location Pop*/
+    .location_pop{
+        display: none;
+        width: 70%;
+        height: 78%;
+        padding: 10px;
+        background-color: #f1f2f6;
+        border-radius: 10px;
+        padding: 20px;
+        padding-bottom: 40px;
+    }
+
     .location_pop_content {
         width: 70%;
         height: 78%;
@@ -80,6 +91,7 @@
         border-radius: 10px;
         padding: 20px;
         padding-bottom: 40px;
+      
     }
 
     .location_pop_map {
