--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -40,6 +40,7 @@
         box-sizing: border-box;
         height: 42%;
         box-shadow: var(--box-shadow2);
+        background-color: var(--background-color-right);
 
     }
 
