--- a/public/css/Component/Customer/Customer_Request_Ongoing.css
+++ b/public/css/Component/Customer/Customer_Request_Ongoing.css
@@ -146,6 +146,10 @@
         transform: translate(-50%, -50%) scale(1);
     }
 
+    .delete_confirm.active+overlay {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
     .popup {
         width: 400px;
         background: white;
