--- a/public/css/Component/Customer/Customer_Request_Main.css
+++ b/public/css/Component/Customer/Customer_Request_Main.css
@@ -20,6 +20,8 @@
     .main-right-top {
         display: flex;
         flex-direction: column;
+        background-color: var(--background-color-main);
+
     }
 
     .main-right-top-one {
