--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -17,48 +17,161 @@
 
     .main-right {
         display: grid;
-        grid-template-rows: 9.5% 90.5%;
+        grid-template-rows: 9% 91%;
     }
 
     .main-right {
+
         .main-top {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
             align-items: center;
-            font-family: Inter;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            justify-content: space-around;
+            border: 10px;
+            width: 100%;
+            box-sizing: border-box;
+            box-shadow: var(--box-shadow2);
         }
 
-        .main-top img {
-            width: 32px;
-            height: 32px;
-            margin-left: 30px;
-        }
 
-        .main-top-component {
+        .main-right-top-search {
             display: flex;
-            flex-direction: row;
             align-items: center;
             justify-content: center;
-            margin-right: 16.5px;
-
+            width: 35%;
+            position: relative;
+            visibility: hidden;
         }
 
-        .back-button {
+        .main-right-top-search i {
+            position: absolute;
+            font-size: 25px;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            visibility: hidden;
+        }
+
+        .main-right-top-search input {
+            width: 100%;
+            height: 33px;
+            border-radius: 7px;
+            background-color: var(--background-color-two);
+            border: 1px solid #dcdde1;
+            font-size: 14px;
+            padding-left: 40px;
+            letter-spacing: 0.03rem;
+            color: var(--main-text-color);
+            visibility: hidden;
+        }
+
+        .main-right-top-search input:focus {
+            border: 1px solid #1ca557;
+            outline: none;
+        }
+
+        .main-right-top-notification {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-left: 35%;
+            margin-right: 2.5%;
+        }
+
+        .dot {
+            width: 11px;
+            height: 11px;
+            border-radius: 50%;
+            background-color: #F13E3E;
+            margin-top: -14px;
+            margin-left: -12px;
+        }
+
+        .main-right-top-notification i {
+            font-size: 29px;
             cursor: pointer;
         }
 
-        .main-top-component p {
-            font-family: inter;
-            font-size: 17px;
+        .notification_popup {
+            height: 0;
+            position: absolute;
+            top: 9%;
+            right: 11%;
+            background-color: var(--background-color-main);
+            border-radius: 10px;
+            padding: 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: height 0.6s ease-in;
+            width: 18%;
+            visibility: hidden;
+            opacity: 0;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            overflow: scroll;
+            border: 1px solid #dcdde1;
         }
 
-        .main-top-component img {
-            width: 55px;
-            height: 55px;
-            margin-left: 15px;
+        .notification_popup h1 {
+            font-size: 19px;
+            letter-spacing: 0.001rem;
+            margin-bottom: 13px;
+            margin-top: 5px;
+            margin-left: 8px;
+        }
+
+        .notification_popup.active {
+            height: 200px;
+            padding: 10px;
+            visibility: visible;
+            opacity: 1;
+        }
+
+        .notification {
+            height: 43px !important;
+            margin-top: 10px;
+            display: flex;
+            align-items: center;
+            padding-left: 10px;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        .notification:hover {
+            background-color: var(--notification-hover);
+        }
+
+        .notification-green-dot {
+            width: 11px;
+            height: 11px;
             border-radius: 50%;
+            background-color: var(--green-color-one);
+            margin-right: 10px;
+        }
+
+        .main-right-top-profile {
+            display: flex;
+            margin-right: 40px;
+        }
+
+        .main-right-top-profile img {
+            width: 50px;
+            height: 50px;
+            margin-right: 15px;
+            border-radius: 10px;
+        }
+
+        .main-right-top-profile-cont {
+            margin-top: 7px;
+        }
+
+        .main-right-top-profile-cont h3 {
+            font-size: 18px;
+            letter-spacing: 0.03rem;
+        }
+
+        .main-right-top-profile-cont p {
+            font-size: 14px;
         }
 
         .main-bottom {
