--- a/public/css/Component/Admin/Admin_Center_Main_Request_Cancelled.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Request_Cancelled.css
@@ -72,9 +72,18 @@
     }
 
     /*Location Pop*/
-    .location_pop{
+    .location_pop {
         display: none;
-
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
     }
 
     .location_pop_content {
