--- a/public/css/Component/Collector/Collector_Editprofile.css
+++ b/public/css/Component/Collector/Collector_Editprofile.css
@@ -9,6 +9,14 @@
         font-family: inter;
 
     }
+    #edit_profile i {
+        color: var(--green-color-one);
+    }
+
+    #edit_profile h3 {
+        color: var(--green-color-one);
+    }
+
 
     .main {
         overflow: hidden;
@@ -28,6 +36,8 @@
         justify-content: flex-end;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
+
+  
 
     .main-right-top img {
         width: 50px;
