--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -1,4 +1,14 @@
 .Collector_Request_Cancelled {
+
+
+    
+    #request i {
+        color: var(--green-color-one);
+    }
+
+    #request h3 {
+        color: var(--green-color-one);
+    }
     .table-row {
         font-size: 1px;
         font-family: Montserrat;
