--- a/public/css/Component/Collector/Collector_Request_Completed.css
+++ b/public/css/Component/Collector/Collector_Request_Completed.css
@@ -8,6 +8,13 @@
         justify-content: center;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
+    #request i {
+        color: var(--green-color-one);
+    }
+
+    #request h3 {
+        color: var(--green-color-one);
+    }
 
     .main-right-bottom-one {
         display: flex;
