--- a/public/css/Component/Customer/Customer_Editprofile.css
+++ b/public/css/Component/Customer/Customer_Editprofile.css
@@ -16,8 +16,9 @@
 
     .main-right {
         display: grid;
-        grid-template-rows: 9%91%;
-        height: 100%;
+        grid-template-rows: 9% 91%;
+        overflow: hidden;
+        height: auto;
     }
 
     .main-right-top {
@@ -29,6 +30,7 @@
         width: 100%;
         box-sizing: border-box;
         box-shadow: var(--box-shadow2);
+        z-index: 3;
     }
 
     .main-right-top-search {
@@ -175,33 +177,46 @@
         align-items: center;
         justify-content: center;
         display: flex;
+        background-color: var(--background-color-right);
+        height: auto;
+        overflow: scroll;
+        box-sizing: border-box;
     }
 
     .main-right-bottom-content {
-        width: 58%;
-        height: 85%;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 20px;
+        width: 70%;
+        height: 110%;
+        box-shadow: var(--box-shadow2);
         border-radius: 10px;
+        box-sizing: border-box;
+        padding: 10px;
+        margin-top: 16%;
+        overflow: hidden !important;
+        margin-bottom: 4%;
     }
 
     .main-right-bottom-content {
         display: grid;
         grid-template-rows: 10% 90%;
+        padding-top: 2%;
     }
 
-    .main-right-bottom-content-top {}
+    .main-right-bottom-content-top {
+        padding-left: 80px;
+    }
 
     .main-right-bottom-content-top h1 {
-        font-size: 28px;
+        font-size: 24px;
         margin-bottom: 6px;
-        color: #2B2B2B;
+        color: var(--main-text-color);
+        letter-spacing: 0.05rem;
     }
 
     .Edit-Profile-line {
         width: 65px;
         height: 5px;
-        background: #1B6652;
+        background: var(--green-color-one);
+
     }
 
     .main-right-bottom-content-bottom {
@@ -212,12 +227,14 @@
     .main-right-bottom-content-bottom-left {
         display: flex;
         flex-direction: column;
-        padding-top: 15px;
+        padding-left: 80px;
     }
 
     .edit-profile-content-profile {
         display: flex;
         justify-content: center;
+        margin-left: 100%;
+        margin-bottom: 29.7px;
     }
 
     .edit-profile-content-profile-container {
@@ -226,17 +243,17 @@
     }
 
     .edit-profile-main-image {
-        height: 90px;
-        width: 90px;
+        height: 135px;
+        width: 135px;
         border-radius: 50%;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .edit-profile-second-image {
-        height: 28px;
-        width: 28px;
-        margin-top: -25px;
-        margin-left: 60px;
+        height: 29px;
+        width: 29px;
+        margin-top: -28px;
+        margin-left: 95px;
         flex: 1;
     }
 
@@ -248,76 +265,77 @@
         height: 28px;
         width: 28px;
         margin-top: -25px;
-        margin-left: 60px;
+        margin-left: 70%;
         opacity: 0;
         cursor: pointer !important;
     }
 
     .edit-profile-content h3 {
-        font-size: 19px;
+        font-size: 15px;
         margin-bottom: 7px;
-        color: #393939;
+        color: var(--main-text-color);
         font-weight: 500;
+        letter-spacing: 0.03rem;
+
     }
 
     .edit-profile-content input {
-        height: 32px;
+        height: 28.5px;
         width: 325px;
         border-radius: 5px;
         border: 1px solid #ccc;
         padding-left: 10px;
-        font-size: 16px;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
     }
 
     .err {
         height: 12px;
         color: red;
         font-size: 14px;
+        letter-spacing: 0.03rem;
     }
 
     .edit-profile-content input:focus {
-        border-color: #4dccaa;
+        border-color: var(--green-color-one);
         outline: none;
     }
 
     .main-right-bottom-content-bottom-left button {
-        height: 38px;
-        width: 225px;
-        outline: none;
-        color: white;
-        font-size: 19px;
-        font-weight: 500;
-        border-radius: 5px;
-        cursor: pointer;
+        background-color: var(--green-color-two);
         border: none;
-        letter-spacing: 1px;
-        background: #1B6652;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-        margin-top: 10px;
+        border-radius: 7px;
+        width: 45%;
+        height: 35px;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        font-weight: bolder;
+        transition: background-color 0.6s ease-in;
     }
 
     .main-right-bottom-content-bottom-right {
         display: flex;
         flex-direction: column;
-        padding-top: 111px;
+        padding-top: 169px;
         padding-left: 25px;
     }
 
     .main-right-bottom-content-bottom-right button {
-        height: 38px;
-        width: 225px;
-        outline: none;
-        color: white;
-        font-size: 19px;
-        font-weight: 500;
-        border-radius: 5px;
-        cursor: pointer;
+        background-color: var(--green-color-two);
         border: none;
-        letter-spacing: 1px;
-        background: #1B6652;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-        margin-top: 10px;
-
+        border-radius: 7px;
+        width: 45%;
+        height: 35px;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        font-weight: bolder;
+        transition: background-color 0.6s ease-in;
     }
 
     .main-right-bottom-content {
@@ -330,8 +348,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
         display: flex;
         align-items: center;
         justify-content: center;
