--- a/public/css/Component/Animation/main.css
+++ b/public/css/Component/Animation/main.css
@@ -65,17 +65,19 @@
 /*Admin-center-chart-animations*/
 @keyframes first {
     from {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
+
     to {
-      transform: rotate(90deg);
+        transform: rotate(90deg);
     }
 }
-  
+
 @keyframes second {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(90deg);
     }
@@ -85,6 +87,7 @@
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(90deg);
     }
@@ -94,7 +97,22 @@
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(90deg);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.05);
+    }
+
+    100% {
+        transform: scale(1);
     }
 }
