--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -1086,7 +1086,9 @@ font-size: 13px;
         letter-spacing: 0.03rem;
         font-weight: bolder;
         transition: background-color 0.6s ease-in;
-        margin-top: 7%;
+        margin-top: 6.1%;
+        animation: pulse 2s infinite;
+
     }
 
     .main-right-bottom-three-right-right {
