--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -1,5 +1,4 @@
 .Customer_Request_collect {
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
 
     * {
         margin: 0;
@@ -32,7 +31,6 @@
             box-sizing: border-box;
             box-shadow: var(--box-shadow2);
         }
-
 
         .main-right-top-search {
             display: flex;
@@ -189,11 +187,11 @@
         .main-bottom-component {
             width: 90%;
             height: 88%;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: var(--box-shadow2);
             padding: 20px;
             border-radius: 10px;
             display: grid;
-            grid-template-columns: 50% 50%;
+            grid-template-columns: 45% 55%;
         }
 
         .main-bottom-component-left {
@@ -203,9 +201,10 @@
         }
 
         .main-bottom-component-left img {
-            width: 90%;
-            height: 90%;
-            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+            width: 88%;
+            height: 88%;
+            box-shadow: var(--box-shadow2);
+            border-radius: 10px;
         }
 
         .main-bottom-component-right {
@@ -218,16 +217,17 @@
         }
 
         .main-bottom-component-right-component-topic {
-            margin-bottom: 25px;
+            margin-bottom: 35px;
         }
 
         .main-bottom-component-right-component-topic h2 {
-            font-size: 27px;
-            margin-bottom: 7px;
+            font-size: 21px;
+            margin-bottom: 4px;
+            letter-spacing: 0.01rem;
         }
 
         .line {
-            background-color: #1B6652;
+            background-color: var(--green-color-one);
             width: 65px;
             height: 4px;
         }
@@ -244,45 +244,56 @@
         }
 
         .main-bottom-component-right-component input {
-            height: 32px;
-            width: 87%;
+            height: 29px;
+            width: 93%;
             outline: none;
             border-radius: 5px;
             border: 1px solid #ccc;
             padding-left: 15px;
-            font-size: 16px;
+            font-size: 14px;
             border-bottom-width: 2px;
             transition: all 0.3s ease;
             margin-bottom: 6px;
-        }
-
-        .main-bottom-component-right-component-main input {
-            height: 32px;
-            width: 87%;
-            outline: none;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            padding-left: 15px;
-            font-size: 15px;
-            border-bottom-width: 2px;
+            background-color: var(--background-color-two);
+            color: var(--main-text-color);
             transition: all 0.3s ease;
-            margin-bottom: 6px;
         }
 
         .main-bottom-component-right-component input:focus {
-            border-color: #4dccaa;
+            border-color: var(--green-color-one);
+            outline: none;
+        }
+
+        .main-bottom-component-right-component-main input {
+            height: 29px;
+            width: 85%;
+            outline: none;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            padding-left: 15px;
+            font-size: 14px;
+            border-bottom-width: 2px;
+
+            margin-bottom: 6px;
+            background-color: var(--background-color-two);
+            color: var(--main-text-color);
+            transition: all 0.3s ease;
+        }
+
+        .main-bottom-component-right-component input:focus {
+            border-color: var(--green-color-one);
+            outline: none;
         }
 
         .main-bottom-component-right-component h2 {
             font-weight: 500;
-            margin-bottom: 5px;
-            font-size: 17px;
-            margin-bottom: 7px;
+            margin-bottom: 6px;
+            font-size: 15px;
         }
 
         .err {
             height: 10px;
-            font-size: 15px;
+            font-size: 14px;
             font-weight: 500;
             margin-bottom: 5px;
             color: #e74c3c;
@@ -297,7 +308,7 @@
         }
 
         .main-bottom-component-right-component select {
-            height: 32px;
+            height: 29px;
             width: 47%;
             outline: none;
             border-radius: 5px;
@@ -307,6 +318,9 @@
             border-bottom-width: 2px;
             transition: all 0.3s ease;
             margin-bottom: 15px;
+            background-color: var(--background-color-two);
+            color: var(--main-text-color);
+            transition: all 0.3s ease;
         }
 
         .center_dropdown {
@@ -328,8 +342,10 @@
             border: none;
             margin-top: none;
             letter-spacing: 1px;
-            background: #1B6652;
-            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+            letter-spacing: 0.03rem;
+            background: var(--green-color-one);
+            font-size: 15px;
+            color: var(--background-color-main);
         }
 
         .main-bottom-component-right-component select option {
@@ -337,7 +353,6 @@
             font-size: 15px;
             cursor: pointer;
         }
-
 
         .Z {
             flex-direction: row;
@@ -350,7 +365,7 @@
 
         .main-bottom-maps {
             display: flex;
-            width: 100px;
+            width: 80px;
             justify-content: center;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -361,7 +376,7 @@
 
         .main-bottom-maps2 {
             display: flex;
-            width: 100px;
+            width: 80px;
             justify-content: center;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -390,25 +405,25 @@
         }
 
         .main-bottom-maps img {
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
         }
 
         .main-bottom-maps h4 {
             font-weight: 500;
-            font-size: 17px;
-            margin-right: 8px;
+            font-size: 15px;
+            margin-right: 6px;
         }
 
         .main-bottom-maps2 img {
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
         }
 
         .main-bottom-maps2 h4 {
             font-weight: 500;
-            font-size: 17px;
-            margin-right: 8px;
+            font-size: 15px;
+            margin-right: 6px;
         }
 
         .main-bottom-component-right-component-button {
@@ -419,18 +434,17 @@
         }
 
         .main-bottom-component-right-component-button button {
-            height: 42px;
+            height: 35px;
             width: 95%;
             outline: none;
-            color: white;
-            font-size: 18px;
             font-weight: 500;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
             border: none;
-            letter-spacing: 1px;
-            background: #1B6652;
-            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+            letter-spacing: 0.03rem;
+            background: var(--green-color-one);
+            font-size: 15px;
+            color: var(--background-color-main);
         }
 
         .moving-image {
