--- a/public/css/Component/Customer/Customer_Editprofile.css
+++ b/public/css/Component/Customer/Customer_Editprofile.css
@@ -293,7 +293,7 @@
 
     .err {
         height: 12px;
-        color: red;
+        color: #F13E3E;
         font-size: 14px;
         letter-spacing: 0.03rem;
     }
